--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "antd": "^5.24.2",
+    "axios": "^1.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
